# software_intro

./: .gitignore  .gitmodules  README.md  meson.build
bus/: can_def.py  dbc_bindings_generation.py  dbc_dict_processor.py  generate.py  requirements.txt
bus/bindings/: main_db.c  main_db.h  nodes.h  sim_db.c  sim_db.h
bus/dbc/: main.dbc  sim.dbc
sb/: hal.c  hal.h  main.c  sb.c  sb.h
sim/: main.c  sim.h
slides/: introduzione_software.odp
vcu/: hal.c  hal.h  main.c  vcu.c  vcu.h
wsl/: kernelbuilder.sh
